dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: khedmadeploy
  labels:
    app: khedma-backend
spec:
  type: NodePort
  selector:
    app: khedma-backend
  ports:
    - protocol: TCP
      port: 8000          
      targetPort: 8000    
      nodePort: 30001
