dev/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: khedmadeploy
  labels:
    app: khedma-database
spec:
  type: NodePort
  selector:
    app: khedma-database
  ports:
    - protocol: TCP
      port: 5432     
      targetPort: 5432  
      nodePort: 30000
